# StudyC--

./: .gitignore  CMakeLists.txt  main.cpp
include/: Str.h  Vec.h  grade.h  student_info.h
src/: grade.cpp  main.cpp  student_info.cpp
